refactor: 전체적인 코드 리팩토링
기능은 유지한채 간략화 할수 있는 코드는 간략화 했다.