@@ -1,31 +1,24 @@
 package utils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class HttpRequestUtils {
 
 	public static Map<String, String> parseQueryString(String queryString) {
-		Map<String, String> queryParams = new HashMap<>();
-		if (!queryString.equals("")) {
-			String[] params = queryString.split("&");
-			for (String param : params) {
-				String[] keyValue = param.split("=");
-				queryParams.put(keyValue[0], keyValue.length > 1 ? keyValue[1] : "");
-			}
+		if (queryString.equals("")) {
+			return new HashMap<>();
 		}
-		return queryParams;
+		return Arrays.stream(queryString.split("&"))
+			.map(s -> s.split("="))
+			.collect(Collectors.toMap(a -> a[0], a -> a.length > 1 ? a[1] : ""));
 	}
 
 	public static String decodeURL(String URL) {
-		try {
-			String decodedURL = URLDecoder.decode(URL, "UTF-8");
-			return decodedURL;
-		} catch (UnsupportedEncodingException e) {
-			e.printStackTrace();
-		}
-		return URL;
+		return URLDecoder.decode(URL, StandardCharsets.UTF_8);
 	}
 }
